Initial Jekyll version with template
Initial version using a template in Jekyll and with first content

--- a/index.html
+++ b/index.html
@@ -1,27 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>opendatalab temp</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-
-<body>
-    <div class="highlight-blue">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">opendatalab.no</h2>
-                <p class="text-center">This site will in the future provide information and tools supporting publication and use of open data.</p>
-            </div>
-            <div class="buttons"></div>
-        </div>
-    </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+---
+layout: home
+---
